# mojibake

./: .gitignore  Cargo.toml  build.rs  license.txt
examples/: basic.rs
mojibake/: .gitignore  Cargo.toml  build.rs
mojibake-bin/: Cargo.toml
mojibake-lib/: readme.md
mojibake-lib/src/: encode.rs  lib.rs
mojibake/examples/: basic.rs
mojibake/src/: decode.rs  encode.rs  lib.rs
proptest-regressions/: lib.txt
src/: lib.rs
